# VTIL-Python

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  VTIL-Python.licenseheader  VTIL-py.sln  VTIL-py.vcxproj  VTIL-py.vcxproj.filters  appveyor.yml  requirements.txt  setup.py
examples/: routine.py
examples/arm64/: tracer.py
src/: module.cpp
src/architecture/arch/: architecture_identifier.hpp  identifier.hpp  instruction_desc.hpp  operand.hpp  operands.hpp  register_desc.hpp
src/architecture/misc/: debug.hpp
src/architecture/routine/: basic_block.hpp  call_convention.hpp  instruction.hpp  routine.hpp
src/architecture/symex/: variable.hpp
src/architecture/trace/: cached_tracer.hpp  tracer.hpp
src/common/util/: enumerator.hpp  fnv128.hpp  fnv64.hpp
src/compiler/common/: interface.hpp
src/helpers/: basic_block_helper.hpp  operand_helper.hpp
src/symex/expressions/: expression.hpp  unique_identifier.hpp
src/wrappers/: __init__.py
src/wrappers/arch/: __init__.py
src/wrappers/common/: __init__.py
src/wrappers/compiler/: __init__.py
src/wrappers/symex/: __init__.py
tests/arm64/: sample.py
